Refactor metadata handling and improve variable naming in block and item utilities